--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.28" />
+        app:layout_constraintGuide_percent="0.1" />
 
 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guidelineLeft"
@@ -52,14 +52,30 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:id="@+id/gif1"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toTopOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/loader" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineLoginView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.9" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/gif1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/login_page_image" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/frameLayout"
@@ -68,15 +84,15 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_marginTop="8dp"
             android:background="@color/igniteSecondary"
 
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.82">
+            app:layout_constraintVertical_bias="1.0">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/igniteSecondary">
 
                 <Button
@@ -85,7 +101,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/button_shape"
@@ -93,65 +108,34 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:textColor="@color/contrasText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/guidelineLoginView3"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="12dp"
-                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView1"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/xx"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_fire" />
+                    app:srcCompat="@drawable/cube" />
 
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineLoginView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.9" />
-
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineLoginView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.2" />
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineLoginView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.4" />
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guidelineLoginView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.6" />
 
                 <me.zhanghai.android.materialedittext.MaterialTextInputLayout
+                    android:id="@+id/materialTextInputLayout2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
 
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView3"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/xx">
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <me.zhanghai.android.materialedittext.MaterialEditText
                         android:id="@+id/password_editText"
@@ -172,12 +156,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView2"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/materialTextInputLayout2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/guidelineLoginView1">
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <me.zhanghai.android.materialedittext.MaterialEditText
                         android:id="@+id/username_editText"
@@ -197,15 +180,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<ImageView
-    android:id="@+id/imageView"
-    android:layout_width="0dp"
-    android:layout_height="96dp"
-    android:layout_marginBottom="8dp"
-    app:layout_constraintBottom_toTopOf="@+id/consraintLayoutLoginView"
-    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-    app:srcCompat="@drawable/login_page_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
