--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -96,6 +96,9 @@
             android:name="event_name"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_nav_events_to_nav_home"
+            app:destination="@id/nav_home" />
     </fragment>
     <fragment
         android:id="@+id/nav_navigation"
