--- a/app/src/main/res/layout/fragment_about_event.xml
+++ b/app/src/main/res/layout/fragment_about_event.xml
@@ -20,17 +20,17 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
             android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
             >
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:expandedTitleTextAppearance="@android:color/transparent"
                 android:fitsSystemWindows="true"
-                >
+                app:expandedTitleTextAppearance="@android:color/transparent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
                     android:id="@+id/about_page_image_view"
@@ -43,28 +43,26 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                     android:scaleType="fitXY"
 
                     app:layout_collapseMode="parallax" />
+
                 <androidx.appcompat.widget.Toolbar
 
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     android:title="Ignite 2k'19 welcomes you all!"
                     app:layout_collapseMode="pin"
-                    />
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-
 
 
         </com.google.android.material.appbar.AppBarLayout>
 
 
-
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="1000dp"
             android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -76,14 +74,17 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView4" >
+                    app:layout_constraintTop_toBottomOf="@+id/cardView4"
+                    app:layout_constraintVertical_bias="0.0">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:background="@color/igniteSecondaryLight"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@color/igniteSecondaryLight">
 
                         <TextView
                             android:id="@+id/event_rules_about_event"
@@ -92,10 +93,10 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
-                            android:text="@string/ignite_rules"
                             android:lineSpacingMultiplier="1.5"
-                            android:textSize="14sp"
+                            android:text="@string/ignite_rules"
                             android:textColor="@color/contrasText"
+                            android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -105,13 +106,13 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                         <TextView
                             android:id="@+id/textView15"
                             android:layout_width="wrap_content"
-                            android:lineSpacingMultiplier="1.5"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
-                            android:textColor="@color/contrasText"
+                            android:lineSpacingMultiplier="1.5"
                             android:text="@string/ignite_rules"
+                            android:textColor="@color/contrasText"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -130,9 +131,9 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                     app:cardUseCompatPadding="true">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:background="@color/igniteSecondaryLight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/igniteSecondaryLight"
                         android:orientation="vertical">
 
 
@@ -147,23 +148,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <com.airbnb.lottie.LottieAnimationView
-                            android:id="@+id/imageView6"
-                            android:layout_width="32dp"
-                            android:layout_height="32dp"
-                            app:lottie_fileName="mapmaker.json"
-                            app:lottie_autoPlay="true"
-                            app:lottie_loop="true"
-
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:src="@drawable/ic_venue"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-
                         <TextView
-                            android:textColor="@color/contrasText"
                             android:id="@+id/event_desc_about_event"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -171,14 +156,16 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:lineSpacingMultiplier="1.5"
-
                             android:padding="12dp"
+
                             android:text="@string/about_ignite_info"
+                            android:textColor="@color/contrasText"
                             android:textSize="14sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
 
                         <TextView
 
@@ -206,6 +193,20 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="@+id/about_page_date_time_textview"
                             app:layout_constraintTop_toTopOf="@+id/imageView6" />
+
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/imageView6"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:src="@drawable/ic_venue"
+
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/imageView5"
+                            app:lottie_autoPlay="true"
+                            app:lottie_fileName="mapmaker.json"
+                            app:lottie_loop="true" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
