--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -167,11 +167,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
-                        android:inputType="textPersonName"
+                        android:inputType="textWebEmailAddress"
                         android:maxLines="1"
                         android:textColor="@color/contrasText"
                         android:textColorHint="@color/contrasText"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"></me.zhanghai.android.materialedittext.MaterialEditText>
+                    <requestFocus />
+                    />
 
                 </me.zhanghai.android.materialedittext.MaterialTextInputLayout>
 
