splash screen modification and stability

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,11 @@
     android:background="@drawable/bgg"
     tools:context=".splash">
 
-
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/backgif"
+    />
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="400dp"
